profile activity layout

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -57,7 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/profile_button_custom_bg"
-        android:drawableStart="@drawable/ic_profile"
+        android:drawableStart="@drawable/ic_map"
         android:drawablePadding="10dp"
         android:paddingHorizontal="21dp"
         android:paddingVertical="16dp"
@@ -78,7 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/profile_button_custom_bg"
-        android:drawableStart="@drawable/ic_profile"
+        android:drawableStart="@drawable/ic_order"
         android:drawablePadding="10dp"
         android:paddingHorizontal="21dp"
         android:paddingVertical="16dp"
@@ -99,7 +99,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/profile_button_custom_bg"
-        android:drawableStart="@drawable/ic_profile"
+        android:drawableStart="@drawable/ic_settings"
         android:drawablePadding="10dp"
         android:paddingHorizontal="21dp"
         android:paddingVertical="16dp"
@@ -120,7 +120,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/profile_button_custom_bg"
-        android:drawableStart="@drawable/ic_profile"
+        android:drawableStart="@drawable/ic_log_out"
         android:drawablePadding="10dp"
         android:paddingHorizontal="21dp"
         android:paddingVertical="16dp"
