--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,6 @@
     <color name="text_color">#E4E4E4</color>
     <color name="text_color_2">#E7A15C</color>
     <color name="dark_text_color">#707070</color>
-    <color name="grey_opacity60_primary">#60756860</color>
+    <color name="grey_opacity60_primary">#746860</color>
     <color name="title_text_color">#E7A15C</color>
 </resources>
