--- a/app/src/main/res/layout/fragment_profile_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_profile_bottom_sheet.xml
@@ -89,7 +89,7 @@
         android:paddingVertical="16dp"
         android:paddingStart="0dp"
         android:paddingEnd="0dp"
-        android:text="@string/camera"
+        android:text="@string/cancel"
         android:textAlignment="textStart"
         android:textAllCaps="false"
         android:textColor="@color/text_color"
@@ -104,7 +104,7 @@
         android:background="@drawable/profile_button_custom_bg"
         android:backgroundTint="@color/text_color"
         android:fontFamily="@font/raleway_medium"
-        android:text="@string/camera"
+        android:text="@string/cancel"
         android:layout_margin="20dp"
         android:textAlignment="center"
         android:textAllCaps="true"
