--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="dark_text_color">#707070</color>
     <color name="grey_opacity60_primary">#746860</color>
     <color name="title_text_color">#E7A15C</color>
+    <color name="error_color">#F24E1E</color>
 </resources>
