--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,6 +15,7 @@
         <item name="android:windowBackground">@color/grey_primary</item>
         <!-- Customize your theme here. -->
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
+        <item name="colorControlNormal">@color/text_color</item>
     </style>
 
     <style name="AppBottomSheetDialogTheme"
