--- a/app/src/main/res/layout/toobar_home.xml
+++ b/app/src/main/res/layout/toobar_home.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/grey_primary"
     android:orientation="vertical"
     android:paddingTop="10dp">
@@ -14,16 +16,72 @@
             android:id="@+id/btnBackHome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            tools:ignore="ContentDescription" />
 
-        <TextView
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="@string/app_name"-->
+<!--            android:fontFamily="@font/festive_regular"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:layout_toEndOf="@id/btnBackHome"-->
+<!--            android:textSize="38sp"/>-->
+
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/carViewAvatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:fontFamily="@font/festive_regular"
-            android:textColor="@color/white"
             android:layout_toEndOf="@id/btnBackHome"
-            android:textSize="38sp"/>
+            app:cardCornerRadius="90dp">
+
+            <ImageView
+                android:id="@+id/imgAvatar"
+                android:layout_width="46dp"
+                android:layout_height="46dp"
+                android:background="@drawable/circle_shape"
+                android:src="@drawable/avatar"
+                tools:ignore="ContentDescription" />
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hi, Latte!"
+            android:textSize="16sp"
+            android:textColor="@color/grey_primary_variant"
+            android:layout_toEndOf="@id/carViewAvatar"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/raleway_regular"/>
+
+        <TextView
+            android:id="@+id/tvScores"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3000"
+            android:textSize="11sp"
+            android:fontFamily="@font/montserrat_regular"
+            android:layout_below="@id/tvName"
+            android:layout_toEndOf="@id/carViewAvatar"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="4dp"/>
+
+        <TextView
+            android:id="@+id/tvCoin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/tvScores"
+            android:layout_below="@id/tvName"
+            android:text="coin"
+            android:textSize="11sp"
+            android:fontFamily="@font/raleway_regular"
+            android:layout_marginTop="3dp"
+            android:layout_marginStart="3dp"/>
 
         <ImageView
             android:id="@+id/imgNotification"
@@ -31,7 +89,8 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_notification"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            tools:ignore="ContentDescription" />
     </RelativeLayout>
 
     <SearchView
