--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -7,17 +7,50 @@
     android:paddingTop="20dp"
     android:background="@color/grey_primary">
 
-    <include
-        android:id="@+id/toolbarHome"
+    <RelativeLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/iconBackHome"
+            android:layout_centerVertical="true"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            android:layout_marginStart="20dp"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:id="@+id/tvCategories"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Categories"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/iconBackHome"
+            android:layout_marginStart="18dp"
+            android:fontFamily="@font/raleway_regular"
+            android:textSize="20sp"
+            android:textColor="@color/grey_primary_variant"/>
+    </RelativeLayout>
+
+
+
+    <SearchView
+        android:layout_below="@id/appbar"
+        android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:queryHint="Search for your coffee..."
+        android:iconifiedByDefault="false"
+        android:layout_marginTop="27dp"
         android:layout_marginHorizontal="20dp"
-        layout="@layout/toobar_home" />
+        android:background="@drawable/searchview_background"
+        android:backgroundTint="@color/grey_opacity60_primary"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/toolbarHome"
+        android:layout_below="@id/searchView"
         android:layout_alignParentBottom="true">
 
         <RelativeLayout
@@ -26,21 +59,16 @@
             android:layout_height="139dp">
 
             <TextView
-                android:layout_marginTop="27dp"
-                android:layout_marginHorizontal="20dp"
+                android:id="@+id/tvNull"
+                android:layout_marginTop="17dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvCategories"
-                android:text="Categories"
-                android:textColor="@color/grey_primary_variant"
-                android:textSize="19sp"/>
+                android:layout_height="wrap_content"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
+                android:layout_below="@id/tvNull"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tvCategories"
-                android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="20dp"/>
 
             <androidx.recyclerview.widget.RecyclerView
@@ -48,7 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/recyclerView"
-                android:layout_marginTop="17dp"
+                android:layout_marginTop="3dp"
                 android:layout_marginBottom="24dp"
                 android:layout_marginHorizontal="8dp"/>
 
