--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,6 +18,10 @@
         <item name="colorControlNormal">@color/text_color</item>
     </style>
 
+    <style name="switchColor">
+        <item name="colorControlActivated">@color/text_color_2</item>
+    </style>
+
     <style name="roundedImageViewRounded">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
