--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="grey_opacity60_primary">#746860</color>
     <color name="title_text_color">#E7A15C</color>
     <color name="error_color">#F24E1E</color>
+    <color name="readed">#493b31</color>
 </resources>
