--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -39,5 +39,12 @@
         </LinearLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
+    
+    <androidx.fragment.app.FragmentContainerView
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:id="@+id/map"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_checkout"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
