--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -298,6 +298,7 @@
                     android:paddingVertical="7dp">
 
                     <TextView
+                        android:id="@+id/tv_use_jolie_coin"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         style="@style/RegularNumber2"
@@ -473,6 +474,7 @@
                 android:backgroundTint="@color/grey_primary_variant"/>
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/summary_container"
