--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -299,7 +299,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/RegularText"
-            android:text="Suggestion"
+            android:text="@string/suggestion"
             android:layout_marginBottom="15dp"
             android:textColor="@color/text_color_2"/>
 
