--- a/app/src/main/res/layout/item_rv_bestsaller.xml
+++ b/app/src/main/res/layout/item_rv_bestsaller.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="15dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/item_card"
+        android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="94dp"
         android:elevation="10dp"
@@ -110,6 +110,7 @@
 
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/btn_add_card"
                 android:layout_marginEnd="15dp"
                 app:layout_constraintBottom_toBottomOf="@+id/item_img"
                 app:layout_constraintEnd_toEndOf="parent"
