--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -115,4 +115,9 @@
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:windowBackground">@color/grey_primary_variant</item>
     </style>
+    
+    <style name="customChipStyle"  parent="Widget.MaterialComponents.Chip.Filter">
+        <item name="chipBackgroundColor">@color/chip_background_color</item>
+        <item name="android:textColor">@color/chip_text_color</item>
+    </style>
 </resources>
