add momo payment and create api

--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -36,9 +36,9 @@
             android:id="@+id/iconCheck"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/ic_check"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_check" />
 
     </RelativeLayout>
 
