--- a/app/src/main/res/layout/fragment_catagories_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_catagories_bottom_sheet.xml
@@ -233,7 +233,7 @@
                     android:fontFamily="@font/montserrat_regular"
                     android:text="100%"
                     android:textColor="@color/text_color"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
             </RadioGroup>
             <TextView
                 android:id="@+id/tv_topping"
@@ -442,6 +442,7 @@
         android:layout_marginTop="24dp"
         android:layout_width="90dp"
         android:layout_height="40dp"
+        android:paddingHorizontal="10dp"
         android:fontFamily="@font/raleway_regular"
         android:background="@drawable/rounded_shape"
         android:text="Purchase"
