--- a/app/src/main/res/drawable/ic_star_fill.xml
+++ b/app/src/main/res/drawable/ic_star_fill.xml
@@ -6,8 +6,8 @@
   <path
       android:pathData="M12,2l3.09,6.26l6.91,1.01l-5,4.87l1.18,6.88l-6.18,-3.25l-6.18,3.25l1.18,-6.88l-5,-4.87l6.91,-1.01l3.09,-6.26z"
       android:strokeLineJoin="round"
-      android:strokeWidth="1"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
+      android:strokeWidth="2"
+      android:fillColor="@color/grey_primary_variant"
+      android:strokeColor="@color/grey_primary_variant"
       android:strokeLineCap="round"/>
 </vector>
