--- a/app/src/main/res/layout/item_row_layout.xml
+++ b/app/src/main/res/layout/item_row_layout.xml
@@ -25,18 +25,26 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
-            <ImageView
-                android:id="@+id/item_img"
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/img_card"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
-                android:layout_margin="15dp"
-                android:scaleType="centerCrop"
+                app:cardCornerRadius="9dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/e"
-                android:background="@drawable/item_image_custom_bg"/>
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/item_img"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/e"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </com.google.android.material.card.MaterialCardView>
 
             <TextView
                 android:id="@+id/item_name"
@@ -49,7 +57,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginTop="25dp"
-                app:layout_constraintStart_toEndOf="@+id/item_img"
+                app:layout_constraintStart_toEndOf="@+id/img_card"
                 app:layout_constraintTop_toTopOf="parent">
             </TextView>
 
@@ -77,7 +85,7 @@
                 android:textColor="@color/text_color"
                 android:textSize="11sp"
                 android:fontFamily="@font/montserrat_regular"
-                app:layout_constraintStart_toEndOf="@+id/item_img"
+                app:layout_constraintStart_toEndOf="@+id/img_card"
                 app:layout_constraintTop_toBottomOf="@+id/item_name"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="7dp">
@@ -115,9 +123,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
                 android:src="@drawable/ic_heart_fill"
-                app:layout_constraintBottom_toBottomOf="@+id/item_img"
+                app:layout_constraintBottom_toBottomOf="@+id/img_card"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/item_img">
+                app:layout_constraintTop_toTopOf="@+id/img_card">
             </ImageView>
 
 
