--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -12,6 +12,7 @@
         android:id="@+id/toolbar_checkout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:elevation="0dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
@@ -71,8 +72,7 @@
                 android:text="@string/change"
                 android:textColor="@color/text_color_2"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="33dp"/>
+                app:layout_constraintBottom_toBottomOf="@id/tv_information_label"/>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/shipping_container"
