--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -11,6 +11,9 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        android:layout_marginEnd="10dp"
         style="@style/CheckBox"/>
 
     <androidx.cardview.widget.CardView
@@ -21,6 +24,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:src="@drawable/image_logo"
             android:scaleType="centerCrop"
             tools:ignore="ContentDescription" />
     </androidx.cardview.widget.CardView>
@@ -34,17 +38,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/RegularText"
-            android:text="@string/app_name"/>
+            android:text="Black tea"
+            tools:ignore="HardcodedText" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/SmallText"
-            android:text="@string/app_name"/>
+            android:text="With milk"
+            tools:ignore="HardcodedText" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/SmallText"
-            android:text="@string/app_name"/>
+            style="@style/SmallNumber"
+            android:text="90.000 VND"
+            tools:ignore="HardcodedText" />
 
     </LinearLayout>
 
@@ -56,31 +63,51 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#5A514C">
+        android:backgroundTint="#554C47"
+        app:cardElevation="4dp"
+        app:cardCornerRadius="3dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageButton
+            <androidx.cardview.widget.CardView
                 android:layout_width="18dp"
                 android:layout_height="18dp"
-                android:background="@drawable/ic_remove"
-                tools:ignore="ContentDescription" />
+                app:cardCornerRadius="3dp"
+                android:backgroundTint="#D6D1CE">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_remove"
+                    app:tint="@color/black" />
+
+            </androidx.cardview.widget.CardView>
 
             <TextView
-                android:layout_width="16dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/RegularText"
-                android:textAlignment="center"
-                android:text="1"/>
+                style="@style/SmallText"
+                android:text="1"
+                android:layout_marginHorizontal="6dp"/>
 
-            <ImageButton
+            <androidx.cardview.widget.CardView
                 android:layout_width="18dp"
                 android:layout_height="18dp"
-                android:background="@drawable/ic_add"
-                tools:ignore="ContentDescription" />
+                app:cardCornerRadius="3dp"
+                android:backgroundTint="#D6D1CE">
+
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_add_16"
+                    app:tint="@color/black" />
+
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
