--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,15 +11,18 @@
 
 
     <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/user_img"
         android:layout_marginTop="50dp"
         android:layout_width="80dp"
         android:layout_height="80dp"
         app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
         android:layout_gravity="center"
+        android:scaleType="centerCrop"
         android:src="@drawable/image_logo">
     </com.google.android.material.imageview.ShapeableImageView>
 
     <TextView
+        android:id="@+id/user_name"
         android:layout_marginTop="18dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
