--- a/app/src/main/res/layout/item_rv_bestsaller.xml
+++ b/app/src/main/res/layout/item_rv_bestsaller.xml
@@ -51,11 +51,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:fontFamily="@font/raleway_variable_font_wght"
+                android:fontFamily="@font/raleway_regular"
                 android:text="@string/item_name"
                 android:textColor="@color/text_color"
                 android:textSize="16sp"
-                android:textStyle="bold"
                 android:layout_marginTop="25dp"
                 app:layout_constraintStart_toEndOf="@+id/img_card"
                 app:layout_constraintTop_toTopOf="parent">
@@ -135,8 +134,8 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="48dp"
-                        android:src="@drawable/ic_cart"
-                        android:layout_centerVertical="true"/>
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/ic_cart" />
 
                     <TextView
                         android:layout_width="wrap_content"
