--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -111,8 +111,9 @@
         <item name="android:textColor">@color/text_color</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/grey_secondary</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondaryVariant">@color/title_text_color</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSurface">@color/title_text_color</item>
         <item name="android:windowBackground">@color/grey_primary_variant</item>
     </style>
     
